// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icons/PaletteIcons2 should render the follow up palette icon 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.f {
  -webkit-filter: drop-shadow(0 1px 1px #fff);
  filter: drop-shadow(0 1px 1px #fff);
}
.g {
  font-size: calc(1.375rem + 1.5vw);
}
@media (min-width: 1200px) {
  .e {
    font-size: 2.5rem !important;
  }
}


<svg
  class="a b c d e f g palette-icon2"
  xmlns="http://www.w3.org/2000/svg"
  width="16"
  height="16"
  viewBox="0 0 16 16"
  role="img"
>
  <path
    d="M0 .5A.5.5 0 0 1 .5 0h5a.5.5 0 0 1 .5.5v5.277l4.147-4.131a.5.5 0 0 1 .707 0l3.535 3.536a.5.5 0 0 1 0 .708L10.261 10H15.5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5H3a2.99 2.99 0 0 1-2.121-.879A2.99 2.99 0 0 1 0 13.044m6-.21 7.328-7.3-2.829-2.828L6 7.188v5.647zM4.5 13a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0zM15 15v-4H9.258l-4.015 4H15zM0 .5v12.495V.5z"
  ></path>
  <path d="M0 12.995V13a3.07 3.07 0 0 0 0-.005z"></path></svg
>;
"
`;

exports[`components/Icons/PaletteIcons2 should render the palette icon 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
@media (min-width: 1200px) {
  .e {
    font-size: 2.5rem !important;
  }
}


<svg
  class="a b c d e palette-icon2"
  xmlns="http://www.w3.org/2000/svg"
  width="16"
  height="16"
  viewBox="0 0 16 16"
  role="img"
>
  <path
    d="M0 .5A.5.5 0 0 1 .5 0h5a.5.5 0 0 1 .5.5v5.277l4.147-4.131a.5.5 0 0 1 .707 0l3.535 3.536a.5.5 0 0 1 0 .708L10.261 10H15.5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5H3a2.99 2.99 0 0 1-2.121-.879A2.99 2.99 0 0 1 0 13.044m6-.21 7.328-7.3-2.829-2.828L6 7.188v5.647zM4.5 13a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0zM15 15v-4H9.258l-4.015 4H15zM0 .5v12.495V.5z"
  ></path>
  <path d="M0 12.995V13a3.07 3.07 0 0 0 0-.005z"></path></svg
>;
"
`;
